# Ascal

./: README.md  pyproject.toml
ascal/: __init__.py  __init__.pyi
ascal/gai/: __init__.py  chatgpt.py  client.py  gai_instance.py  test_client.py
ascal/gai/openai/: __init__.py  chatgpt.py  kimi.py
ascal/generator/: __init__.py  generator.py  model.py  prompts.py
tests/: gai.py
