[tool.poetry]
name = "ascal"
version = "0.1.0"
description = ""
authors = ["Lzzzt <liuzitao0123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.51.1"
pydantic = "^2.9.2"
jinja2 = "^3.1.4"
faker = "^30.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
